@@ -209,3 +209,4 @@ v 2.0:
 	- Synchronize pushing to Bukkit perms to prevent any ConcurrentModificationException.
 	- Do not grant any permissions (nor update Bukkit) if the server is in offline mode and the player has the permission node 'groupmanager.noofflineperms'.
 	- Negate 'groupmanager.noofflineperms' by default in the owner group.
+	- Add support for BukkitForge using 'overworld' as the main world name.
